added links easy to use links

--- a/games/memory/index.html
+++ b/games/memory/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<a href="../" class="huge-links">Back</a>
+
 <section class="memory-game">
     <div class="memory-card" data-framework="cat">
         <img class="front-face" src="../../img/cat1.svg" alt="cat"/>
@@ -62,6 +64,8 @@
     </div>
 </section>
 
+<a href="./index.html" class="huge-links">Refresh</a>
+<a href="https://github.com/timmalich/edukiz" class="huge-links">GitHub</a>
 <script src="scripts.js"></script>
 </body>
 </html>
