--- a/games/memory/index.html
+++ b/games/memory/index.html
@@ -1,71 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Memory Game Animals</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<a href="../" class="huge-links">Back</a>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <a href="../" class="huge-links">Back</a>
 
-<section class="memory-game">
-    <div class="memory-card" data-framework="cat">
-        <img class="front-face" src="../../img/cat1.svg" alt="cat"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-    <div class="memory-card" data-framework="cat">
-        <img class="front-face" src="../../img/cat1.svg" alt="cat"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
+    <section class="memory-game">
+      <div class="memory-card" data-framework="cat">
+        <img class="front-face" src="../../img/cat1.svg" alt="cat" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+      <div class="memory-card" data-framework="cat">
+        <img class="front-face" src="../../img/cat1.svg" alt="cat" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
 
-    <div class="memory-card" data-framework="chicken">
-        <img class="front-face" src="../../img/chicken1.svg" alt="Aurelia"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-    <div class="memory-card" data-framework="chicken">
-        <img class="front-face" src="../../img/chicken1.svg" alt="Aurelia"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
+      <div class="memory-card" data-framework="chicken">
+        <img class="front-face" src="../../img/chicken1.svg" alt="Aurelia" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+      <div class="memory-card" data-framework="chicken">
+        <img class="front-face" src="../../img/chicken1.svg" alt="Aurelia" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
 
-    <div class="memory-card" data-framework="dino">
-        <img class="front-face" src="../../img/dino1.svg" alt="dino"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-    <div class="memory-card" data-framework="dino">
-        <img class="front-face" src="../../img/dino1.svg" alt="dino"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
+      <div class="memory-card" data-framework="dino">
+        <img class="front-face" src="../../img/dino1.svg" alt="dino" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+      <div class="memory-card" data-framework="dino">
+        <img class="front-face" src="../../img/dino1.svg" alt="dino" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
 
-    <div class="memory-card" data-framework="dog">
-        <img class="front-face" src="../../img/dog1.svg" alt="dog"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-    <div class="memory-card" data-framework="dog">
-        <img class="front-face" src="../../img/dog1.svg" alt="dog"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
+      <div class="memory-card" data-framework="dog">
+        <img class="front-face" src="../../img/dog1.svg" alt="dog" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+      <div class="memory-card" data-framework="dog">
+        <img class="front-face" src="../../img/dog1.svg" alt="dog" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
 
-    <div class="memory-card" data-framework="rabbit">
-        <img class="front-face" src="../../img/rabbit1.svg" alt="rabbit"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-    <div class="memory-card" data-framework="rabbit">
-        <img class="front-face" src="../../img/rabbit1.svg" alt="rabbit"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
+      <div class="memory-card" data-framework="rabbit">
+        <img class="front-face" src="../../img/rabbit1.svg" alt="rabbit" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+      <div class="memory-card" data-framework="rabbit">
+        <img class="front-face" src="../../img/rabbit1.svg" alt="rabbit" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
 
-    <div class="memory-card" data-framework="unicorn">
-        <img class="front-face" src="../../img/unicorn1.svg" alt="unicorn"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-    <div class="memory-card" data-framework="unicorn">
-        <img class="front-face" src="../../img/unicorn1.svg" alt="unicorn"/>
-        <img class="back-face" src="../../img/cat_wallpaper.svg" alt="back face"/>
-    </div>
-</section>
+      <div class="memory-card" data-framework="unicorn">
+        <img class="front-face" src="../../img/unicorn1.svg" alt="unicorn" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+      <div class="memory-card" data-framework="unicorn">
+        <img class="front-face" src="../../img/unicorn1.svg" alt="unicorn" />
+        <img
+          class="back-face"
+          src="../../img/cat_wallpaper.svg"
+          alt="back face"
+        />
+      </div>
+    </section>
 
-<a href="./index.html" class="huge-links">Refresh</a>
-<a href="https://github.com/timmalich/edukiz" class="huge-links">GitHub</a>
-<script src="scripts.js"></script>
-</body>
+    <a href="./index.html" class="huge-links">Refresh</a>
+    <a href="https://github.com/timmalich/edukiz" class="huge-links">GitHub</a>
+    <script src="scripts.js"></script>
+  </body>
 </html>
