do not distribute as github page directly

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>Github Page</h1>
-<a href="./dist/index.html">Show distribution</a>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=http://edukiz.freecluster.eu/">
+    <script type="text/javascript">
+        window.location.href = "http://edukiz.freecluster.eu/"
+    </script>
+    <title>Page Redirection</title>
+</head>
+<body>
+If you are not redirected automatically, follow this <a href='http://edukiz.freecluster.eu/'>link to http://edukiz.freecluster.eu/</a>.
+</body>
+</html>
